создана главная страница

--- a/index.html
+++ b/index.html
@@ -7,17 +7,41 @@
 </head>
 <body>
     <header>
-
+        <h1>Магазин одежды</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Категории</a> </li>
+                <li><a href="#">Доставка</a> </li>
+                <li><a href="#">Поддержка</a> </li>
+                <li><a href="#">Заказы</a> </li>
+                <li><a href="#">Корзина</a> </li>
+            </ul>
+        </nav>
+        <a href="#">Вход</a>
+        <a href="#">Регистрация</a>
     </header>
     <main>
-        <h1>Заголовок текста 1</h1>
-        <h2>Заголовок текста 2</h2>
-        <h3>Заголовок текста 3</h3>
-        <p>Текст 1 абзац 1</p>
-        <p>Текст 1 абзац 2</p>
+       <div>
+            <h2>О нас</h2>
+            <img src="images/images.jpg" alt="" width="500">
+            <p>У нас очень крутой магазин!!!</p>
+            <a href="#">К покупкам!</a>
+       </div>
+       <div>
+            <h2>Популярные товары</h2>
+            <div>
+                <img src="images/dcddcdc.avif" alt="" width="500">
+                <p>Новинки</p>
+            </div>  
+            <div>
+                <img src="images/f501410d03da221c927d764f30cdd6ea.jpg" alt="" width="500">
+                <p>Платья</p>
+            </div>
+       </div>
     </main>
     <footer>
-
+        <h2>Разработчик</h2>
+        <p>Козлова Карина Андреевна, ЭК-31</p>
     </footer>
 </body>
 </html>
