--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1>Магазин одежды</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Категории</a> </li>
-                <li><a href="#">Доставка</a> </li>
-                <li><a href="#">Поддержка</a> </li>
-                <li><a href="#">Заказы</a> </li>
-                <li><a href="#">Корзина</a> </li>
+    <header class="header">
+        <h1 class="header__title">Магазин одежды</h1>
+        <nav class="header__menu menu">
+            <ul class="menu__list">
+                <li class="menu__item"><a href="#">Категории</a> </li>
+                <li  class="menu__item"><a href="#">Доставка</a> </li>
+                <li class="menu__item"><a href="#">Поддержка</a> </li>
+                <li  class="menu__item"><a href="#">Заказы</a> </li>
+                <li class="menu__item menu__item--sale" ><a href="#">Корзина</a> </li>
             </ul>
         </nav>
         <a href="#">Вход</a>
@@ -23,18 +23,18 @@
     <main>
        <div>
             <h2>О нас</h2>
-            <img src="images/images.jpg" alt="" width="500">
+            <img src="images/shop.jpg" alt="" width="500">
             <p>У нас очень крутой магазин!!!</p>
             <a href="#">К покупкам!</a>
        </div>
        <div>
             <h2>Популярные товары</h2>
             <div>
-                <img src="images/dcddcdc.avif" alt="" width="500">
+                <img src="images/dress.avif" alt="" width="500">
                 <p>Новинки</p>
             </div>  
             <div>
-                <img src="images/f501410d03da221c927d764f30cdd6ea.jpg" alt="" width="500">
+                <img src="images/shirt.jpg" alt="" width="500">
                 <p>Платья</p>
             </div>
        </div>
