--- a/index.html
+++ b/index.html
@@ -1,47 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css"
 </head>
 <body>
-    <header class="header">
-        <h1 class="header__title">Магазин одежды</h1>
-        <nav class="header__menu menu">
-            <ul class="menu__list">
-                <li class="menu__item"><a href="#">Категории</a> </li>
-                <li  class="menu__item"><a href="#">Доставка</a> </li>
-                <li class="menu__item"><a href="#">Поддержка</a> </li>
-                <li  class="menu__item"><a href="#">Заказы</a> </li>
-                <li class="menu__item menu__item--sale" ><a href="#">Корзина</a> </li>
+    <header class="header container">
+        <a class="header__logo-wrap" href="index.html">
+            <img class="header__logo" src="images/логотип.png" alt="Логотип" width="50">
+            <h1 class="header__title"> Amore</h1>
+        </a>
+        <nav class="header__menu">
+            <ul class="menu">
+                <li class="menu__item menu__item--active">
+                    <a class="menu__link" href="#">Избранное</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href ="#">Корзина</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href= "#">Поддержка</a> 
+                </li>
             </ul>
         </nav>
-        <a href="#">Вход</a>
-        <a href="#">Регистрация</a>
-    </header>
-    <main>
-       <div>
-            <h2>О нас</h2>
-            <img src="images/shop.jpg" alt="" width="500">
-            <p>У нас очень крутой магазин!!!</p>
-            <a href="#">К покупкам!</a>
-       </div>
-       <div>
-            <h2>Популярные товары</h2>
-            <div>
-                <img src="images/dress.avif" alt="" width="500">
-                <p>Новинки</p>
-            </div>  
-            <div>
-                <img src="images/shirt.jpg" alt="" width="500">
-                <p>Платья</p>
+        <a class="header__button" href="login.html">Вход</a>
+    </header> 
+    <main class="main container">
+        <section>
+            <div class="katalog">
+                <h2>NEW COLLECTION</h2>
+                <a href="#" target="_blank">Eще</a>
+                <ul>
+                    <li> 
+                        <img class= "bluza__image" src="images/блузка.jpg" alt="" width="500">
+                        <h3>Винтажная блуза из шелка</h3>
+                        <p>Цвет: молочный</p>
+                        <a href="#">Перейти к товару</a>
+                        <span>4 999 ₽</span>
+                    </li>
+                    <li>
+                        <img class="dresss__image" src="images/платье.jpg" alt="" width="500">
+                        <h3>Вечернее платье в пол с вырезом</h3>
+                        <p>Цвет: жемчужный</p>
+                        <a href="#">Перейти к товару</a>
+                        <span>11 999 ₽</span>
+                    </li>
+                    <li>
+                        <img class="ubka__image" src="images/юбка.jpg" alt="" width="500">
+                        <h3>Юбка пышная</h3>
+                        <p>Цвет: белый</p>
+                        <a href="#">Перейти к товару</a>
+                        <span>3 499 ₽</span>
+                    </li>
+                    </li>
+                </ul>
             </div>
-       </div>
+        </section>
+        <section>
+            <div class="acessories">
+                <h2>АКСЕССУАРЫ</h2>
+                <a href="#" target="_blank">Eще</a>
+                <ul>
+                    <li> 
+                        <img class="kulon" src="images/кулон.jpg" alt="" width="500">
+                        <h3>Тонкая цепь с овальной подвеской</h3>
+                        <a href="#">Перейти к товару</a>
+                        <span>1 599 ₽</span>
+                    </li>
+                    <li>
+                        <img class="zakolka" src="images/заколка.jpg" alt="" width="500">
+                        <h3>Бархатный бант для волос с заколкой из бусин</h3>
+                        <a href="#">Перейти к товару</a>
+                        <span>1 299 ₽</span>
+                    </li>
+                    <li>
+                        <h3>Круглый браслет из фактурного металла</h3>
+                        <a href="#">Перейти к товару</a>
+                        <span>1 699 ₽</span>
+                    </li>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div class="catalog">
+                <h2 class="catalog__title">КАТАЛОГ</h2>
+                <div class="catalog__card">
+                    <img class="dress__image" src="images/заставкка платья.webp" alt="Фото платья" width="350" height="350">
+                </div>
+                <div class="catalog__card">
+                    <img  class="shirt__image" src="images/футболка.webp" alt="Фото футболки" width="350" height="350">
+                </div>
+                <div class="catalog__card">
+                    <img class="sviter__image" src="images/заставка свитер.jpg" alt="Фото кофты" width="350" height="350">
+                </div>
+            </div>
+        </section>
+        <section>
+            <form action="/">
+                <h1>вход</h1>
+                <input type="tel" name="phone" placeholder="номер телефона" required>
+                <input type="password" name="password" placeholder="пароль" required>
+                <button>ВОЙТИ</button>
+            </form>
+        </section>
     </main>
-    <footer>
-        <h2>Разработчик</h2>
-        <p>Козлова Карина Андреевна, ЭК-31</p>
+    <footer class="footer container">
+        <p>Козлова К. А., Басова Д. А., Пермякова В. В. ЭК-31</p>
+        <ul>
+            <li><a href="#">Правовая оговорка</a></li>
+            <li><a href="#">Пользовательское соглашение</a></li>
+            <li><a href="#">Политика конфиденциальности</a></li>
+        </ul>
     </footer>
 </body>
 </html>
