--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/style.css"
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header class="header container">
         <a class="header__logo-wrap" href="index.html">
-            <img class="header__logo" src="images/логотип.png" alt="Логотип" width="50">
-            <h1 class="header__title"> Amore</h1>
+            <img class="header__logo" src="images/Студия17.jpg" alt="Логотип" width="150" height="150">
+            <h1 class="header__title"> Студия17</h1>
         </a>
         <nav class="header__menu">
             <ul class="menu">
@@ -34,26 +35,25 @@
                 <a href="#" target="_blank">Eще</a>
                 <ul>
                     <li> 
-                        <img class= "bluza__image" src="images/блузка.jpg" alt="" width="500">
-                        <h3>Винтажная блуза из шелка</h3>
-                        <p>Цвет: молочный</p>
+                        <img class= "shirt__image" src="images/рубашка.jpg" alt="" width="500">
+                        <h3>Рубашка офисная</h3>
+                        <p>Цвет: белый</p>
                         <a href="#">Перейти к товару</a>
                         <span>4 999 ₽</span>
                     </li>
                     <li>
-                        <img class="dresss__image" src="images/платье.jpg" alt="" width="500">
-                        <h3>Вечернее платье в пол с вырезом</h3>
-                        <p>Цвет: жемчужный</p>
+                        <img class="dress__image" src="images/платьешко.jpg" alt="" width="500">
+                        <h3>Нежное платье миди</h3>
+                        <p>Цвет: молочный</p>
                         <a href="#">Перейти к товару</a>
-                        <span>11 999 ₽</span>
+                        <span>7 999 ₽</span>
                     </li>
                     <li>
-                        <img class="ubka__image" src="images/юбка.jpg" alt="" width="500">
-                        <h3>Юбка пышная</h3>
-                        <p>Цвет: белый</p>
+                        <img class="skirt__image" src="images/юбкабаллон.jpg" alt="" width="500">
+                        <h3>Юбка баллон мини</h3>
+                        <p>Цвет: бежевый</p>
                         <a href="#">Перейти к товару</a>
                         <span>3 499 ₽</span>
-                    </li>
                     </li>
                 </ul>
             </div>
@@ -64,22 +64,22 @@
                 <a href="#" target="_blank">Eще</a>
                 <ul>
                     <li> 
-                        <img class="kulon" src="images/кулон.jpg" alt="" width="500">
+                        <img class="pendant" src="images/кулон.jpg" alt="" width="500">
                         <h3>Тонкая цепь с овальной подвеской</h3>
                         <a href="#">Перейти к товару</a>
                         <span>1 599 ₽</span>
                     </li>
                     <li>
-                        <img class="zakolka" src="images/заколка.jpg" alt="" width="500">
+                        <img class="barrette" src="images/заколка.jpg" alt="" width="500">
                         <h3>Бархатный бант для волос с заколкой из бусин</h3>
                         <a href="#">Перейти к товару</a>
                         <span>1 299 ₽</span>
                     </li>
                     <li>
+                        <img class="bracelet" src="images/браслет.jpg" alt="" width="500">
                         <h3>Круглый браслет из фактурного металла</h3>
                         <a href="#">Перейти к товару</a>
                         <span>1 699 ₽</span>
-                    </li>
                     </li>
                 </ul>
             </div>
@@ -88,22 +88,22 @@
             <div class="catalog">
                 <h2 class="catalog__title">КАТАЛОГ</h2>
                 <div class="catalog__card">
-                    <img class="dress__image" src="images/заставкка платья.webp" alt="Фото платья" width="350" height="350">
+                    <img class="jacket__image" src="images/жакет.jpg" alt="" width="500">
                 </div>
                 <div class="catalog__card">
-                    <img  class="shirt__image" src="images/футболка.webp" alt="Фото футболки" width="350" height="350">
+                    <img  class="skirt__image" src="images/юбкамакси.jpg" alt="" width="500">
                 </div>
                 <div class="catalog__card">
-                    <img class="sviter__image" src="images/заставка свитер.jpg" alt="Фото кофты" width="350" height="350">
+                    <img class="tie__image" src="images/галстук.jpg" alt="" width="500">
                 </div>
             </div>
         </section>
         <section>
             <form action="/">
-                <h1>вход</h1>
-                <input type="tel" name="phone" placeholder="номер телефона" required>
-                <input type="password" name="password" placeholder="пароль" required>
-                <button>ВОЙТИ</button>
+                <h1>Вход</h1>
+                <input type="tel" name="phone" placeholder="Номер телефона" required>
+                <input type="password" name="password" placeholder="Пароль" required>
+                <button>Войти</button>
             </form>
         </section>
     </main>
