--- a/index.html
+++ b/index.html
@@ -16,85 +16,85 @@
         <nav class="header__menu">
             <ul class="menu">
                 <li class="menu__item menu__item--active">
-                    <a class="menu__link" href="#">Избранное</a>
+                    <a class="menu__link" href="index.html">Главная</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href ="#">Корзина</a>
+                    <a class="menu__link" href="#">Новинки</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href= "#">Поддержка</a> 
+                    <a class="menu__link" href ="#">Аксессуары</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href= "#">Каталог</a> 
                 </li>
             </ul>
         </nav>
         <a class="header__button" href="login.html">Вход</a>
+        <a class="header__button" href="registration.html">Регистрация</a>
     </header> 
     <main class="main container">
         <section>
-            <div class="katalog">
-                <h2>NEW COLLECTION</h2>
+            <div class="catalog">
+                <h2 class="catalog__title">NEW COLLECTION</h2>
                 <a href="#" target="_blank">Eще</a>
-                <ul>
-                    <li> 
-                        <img class= "shirt__image" src="images/рубашка.jpg" alt="" width="500">
-                        <h3>Рубашка офисная</h3>
-                        <p>Цвет: белый</p>
-                        <a href="#">Перейти к товару</a>
-                        <span>4 999 ₽</span>
-                    </li>
-                    <li>
-                        <img class="dress__image" src="images/платьешко.jpg" alt="" width="500">
-                        <h3>Нежное платье миди</h3>
-                        <p>Цвет: молочный</p>
-                        <a href="#">Перейти к товару</a>
-                        <span>7 999 ₽</span>
-                    </li>
-                    <li>
-                        <img class="skirt__image" src="images/юбкабаллон.jpg" alt="" width="500">
-                        <h3>Юбка баллон мини</h3>
-                        <p>Цвет: бежевый</p>
-                        <a href="#">Перейти к товару</a>
-                        <span>3 499 ₽</span>
-                    </li>
-                </ul>
+                <div class="catalog__card">
+                    <img class= "shirt__image" src="images/рубашка.jpg" alt="Фото рубашки" width="500">
+                    <h3>Рубашка офисная</h3>
+                    <p>Цвет: белый</p>
+                    <a href="#">Перейти к товару</a>
+                    <span>4 999 ₽</span>   
+                </div>
+                <div class="catalog__card">
+                    <img class="dress__image" src="images/платьешко.jpg" alt="Фото платьешко" width="500">
+                    <h3>Нежное платье миди</h3>
+                    <p>Цвет: молочный</p>
+                    <a href="#">Перейти к товару</a>
+                    <span>7 999 ₽</span>
+                </div>
+                <div class="catalog__card">
+                    <img class="skirt__image" src="images/юбка.jpg" alt="Фото юбка" width="500">
+                    <h3>Юбка длины макси из ткани с жатым эффектом</h3>
+                    <p>Цвет: бежевый</p>
+                    <a href="#">Перейти к товару</a>
+                    <span>5 499 ₽</span>
+                </div>
             </div>
         </section>
         <section>
-            <div class="acessories">
-                <h2>АКСЕССУАРЫ</h2>
+            <div class="catalog">
+                <h2 class="catalog__title">АКСЕССУАРЫ</h2>
                 <a href="#" target="_blank">Eще</a>
-                <ul>
-                    <li> 
-                        <img class="pendant" src="images/кулон.jpg" alt="" width="500">
-                        <h3>Тонкая цепь с овальной подвеской</h3>
-                        <a href="#">Перейти к товару</a>
-                        <span>1 599 ₽</span>
-                    </li>
-                    <li>
-                        <img class="barrette" src="images/заколка.jpg" alt="" width="500">
-                        <h3>Бархатный бант для волос с заколкой из бусин</h3>
-                        <a href="#">Перейти к товару</a>
-                        <span>1 299 ₽</span>
-                    </li>
-                    <li>
-                        <img class="bracelet" src="images/браслет.jpg" alt="" width="500">
-                        <h3>Круглый браслет из фактурного металла</h3>
-                        <a href="#">Перейти к товару</a>
-                        <span>1 699 ₽</span>
-                    </li>
-                </ul>
+                <div class="catalog__card">
+                    <img class="pendant__image" src="images/кулон.jpg" alt="Фото кулон" width="500">
+                    <h3>Тонкая цепь с овальной подвеской</h3>
+                    <a href="#">Перейти к товару</a>
+                    <span>1 599 ₽</span>
+                </div>
+                <div class="catalog__card">
+                    <img class="barrette__image" src="images/заколка.jpg" alt="Фото заколка" width="500">
+                    <h3>Бархатный бант для волос с заколкой из бусин</h3>
+                    <a href="#">Перейти к товару</a>
+                    <span>1 299 ₽</span>
+                </div>    
+                <div class="catalog__card">
+                    <img class="bracelet__image" src="images/браслет.jpg" alt="Фото браслет" width="500">
+                    <h3>Круглый браслет из фактурного металла</h3>
+                    <a href="#">Перейти к товару</a>
+                    <span>1 699 ₽</span>
+                </div>
             </div>
         </section>
         <section>
             <div class="catalog">
                 <h2 class="catalog__title">КАТАЛОГ</h2>
                 <div class="catalog__card">
-                    <img class="jacket__image" src="images/жакет.jpg" alt="" width="500">
+                    <img class="jacket__image" src="images/жакет.jpg" alt="Фото жакет" width="500">
                 </div>
                 <div class="catalog__card">
-                    <img  class="skirt__image" src="images/юбкамакси.jpg" alt="" width="500">
+                    <img  class="skirt__image" src="images/юбкамакси.jpg" alt="Фото юбкамакси" width="500">
                 </div>
                 <div class="catalog__card">
-                    <img class="tie__image" src="images/галстук.jpg" alt="" width="500">
+                    <img class="tie__image" src="images/галстук.jpg" alt="Фото галстук" width="500">
                 </div>
             </div>
         </section>
