--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header class="header container">
         <a class="header__logo-wrap" href="index.html">
             <img class="header__logo" src="images/Студия17.jpg" alt="Логотип" width="150" height="150">
-            <h1 class="header__title"> Студия17</h1>
+            <h1 class="header__title"> СТУДИЯ17</h1>
         </a>
         <nav class="header__menu">
             <ul class="menu">
@@ -22,79 +22,110 @@
                     <a class="menu__link" href="#">Новинки</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href ="#">Аксессуары</a>
+                    <a class="menu__link" href ="#">Одежда</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href= "#">Каталог</a> 
+                    <a class="menu__link" href ="#">Обувь</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link" href= "#">Аксессуары</a> 
                 </li>
             </ul>
         </nav>
-        <a class="header__button" href="login.html">Вход</a>
-        <a class="header__button" href="registration.html">Регистрация</a>
+        <button class="header__button button" type="button">ПОИСК</button>
+        <button class="header__button button" type="button">ВОЙТИ</button>
+        <button class="header__button button" type="button">ИЗБРАННОЕ</button>
+        <button class="header__button button" type="button">КОРЗИНА</button>
     </header> 
     <main class="main container">
         <section>
             <div class="catalog">
                 <h2 class="catalog__title">NEW COLLECTION</h2>
-                <a href="#" target="_blank">Eще</a>
+                <button class="catalog button">ЕЩЁ</button>
                 <div class="catalog__card">
                     <img class= "shirt__image" src="images/рубашка.jpg" alt="Фото рубашки" width="500">
-                    <h3>Рубашка офисная</h3>
-                    <p>Цвет: белый</p>
-                    <a href="#">Перейти к товару</a>
+                    <h3 class="catalog_name">Рубашка офисная</h3>
+                    <p class="catalog_color">Цвет: белый</p>
+                    <button class="catalog button">Перейти к товару</button>
                     <span>4 999 ₽</span>   
                 </div>
                 <div class="catalog__card">
                     <img class="dress__image" src="images/платьешко.jpg" alt="Фото платьешко" width="500">
-                    <h3>Нежное платье миди</h3>
-                    <p>Цвет: молочный</p>
-                    <a href="#">Перейти к товару</a>
+                    <h3 class="catalog_name">Нежное платье миди</h3>
+                    <p class="catalog_color">Цвет: молочный</p>
+                    <button class="catalog button">Перейти к товару</button>
                     <span>7 999 ₽</span>
                 </div>
                 <div class="catalog__card">
                     <img class="skirt__image" src="images/юбка.jpg" alt="Фото юбка" width="500">
-                    <h3>Юбка длины макси из ткани с жатым эффектом</h3>
-                    <p>Цвет: бежевый</p>
-                    <a href="#">Перейти к товару</a>
+                    <h3 class="catalog_name">Юбка длины макси из ткани с жатым эффектом</h3>
+                    <p class="catalog_color">Цвет: бежевый</p>
+                    <button class="catalog button">Перейти к товару</button>
                     <span>5 499 ₽</span>
                 </div>
             </div>
         </section>
         <section>
             <div class="catalog">
-                <h2 class="catalog__title">АКСЕССУАРЫ</h2>
-                <a href="#" target="_blank">Eще</a>
+                <h2 class="catalog__title">ОДЕЖДА</h2>
                 <div class="catalog__card">
-                    <img class="pendant__image" src="images/кулон.jpg" alt="Фото кулон" width="500">
-                    <h3>Тонкая цепь с овальной подвеской</h3>
-                    <a href="#">Перейти к товару</a>
-                    <span>1 599 ₽</span>
+                    <img class="jacket__image" src="images/жакет.jpg" alt="Фото жакет" width="500">
+                    <h3 class="catalog_name">Жакеты</h3>
+                    <button class="catalog button">СМОТРЕТЬ</button>
                 </div>
                 <div class="catalog__card">
-                    <img class="barrette__image" src="images/заколка.jpg" alt="Фото заколка" width="500">
-                    <h3>Бархатный бант для волос с заколкой из бусин</h3>
-                    <a href="#">Перейти к товару</a>
-                    <span>1 299 ₽</span>
-                </div>    
+                    <img  class="skirt__image" src="images/юбкамакси.jpg" alt="Фото юбкамакси" width="500">
+                    <h3 class="catalog_name">Юбки</h3>
+                    <button class="catalog button">СМОТРЕТЬ</button>
+                </div>
                 <div class="catalog__card">
-                    <img class="bracelet__image" src="images/браслет.jpg" alt="Фото браслет" width="500">
-                    <h3>Круглый браслет из фактурного металла</h3>
-                    <a href="#">Перейти к товару</a>
-                    <span>1 699 ₽</span>
+                    <img class="tie__image" src="images/галстук.jpg" alt="Фото галстук" width="500">
+                    <h3 class="catalog_name">Костюмы</h3>
+                    <button class="catalog button">СМОТРЕТЬ</button>
                 </div>
             </div>
         </section>
         <section>
             <div class="catalog">
-                <h2 class="catalog__title">КАТАЛОГ</h2>
+                <h2 class="catalog__title">ОБУВЬ</h2>
                 <div class="catalog__card">
-                    <img class="jacket__image" src="images/жакет.jpg" alt="Фото жакет" width="500">
+                    <img class="shoes__image" src="images/туфли.jpg" alt="Фото туфли" width="500">
+                    <h3 class="catalog_name">Туфли</h3>
+                    <button class="catalog button">СМОТРЕТЬ</button>
                 </div>
                 <div class="catalog__card">
-                    <img  class="skirt__image" src="images/юбкамакси.jpg" alt="Фото юбкамакси" width="500">
+                    <img class="balletshoes__image" src="images/балетки.jpg" alt="Фото балетки" width="500">
+                    <h3 class="catalog_name">Балетки</h3>
+                    <button class="catalog button">СМОТРЕТЬ</button>
                 </div>
                 <div class="catalog__card">
-                    <img class="tie__image" src="images/галстук.jpg" alt="Фото галстук" width="500">
+                    <img  class="sandals__image" src="images/босоножки.jpg" alt="Фото босоножки" width="500">
+                    <h3 class="catalog_name">Босоножки</h3>
+                    <button class="catalog button">СМОТРЕТЬ</button>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="catalog">
+                <h2 class="catalog__title">АКСЕССУАРЫ</h2>
+                <button class="catalog button">ЕЩЁ</button>
+                <div class="catalog__card">
+                    <img class="pendant__image" src="images/кулон.jpg" alt="Фото кулон" width="500">
+                    <h3 class="catalog_name">Тонкая цепь с овальной подвеской</h3>
+                    <button class="catalog button">Перейти к товару</button>
+                    <span>1 599 ₽</span>
+                </div>
+                <div class="catalog__card">
+                    <img class="barrette__image" src="images/заколка.jpg" alt="Фото заколка" width="500">
+                    <h3 class="catalog_name">Бархатный бант для волос с заколкой из бусин</h3>
+                    <button class="catalog button">Перейти к товару</button>
+                    <span>1 299 ₽</span>
+                </div>    
+                <div class="catalog__card">
+                    <img class="bracelet__image" src="images/браслет.jpg" alt="Фото браслет" width="500">
+                    <h3 class="catalog_name">Круглый браслет из фактурного металла</h3>
+                    <button class="catalog button">Перейти к товару</button>
+                    <span>1 699 ₽</span>
                 </div>
             </div>
         </section>
@@ -108,7 +139,7 @@
         </section>
     </main>
     <footer class="footer container">
-        <p>Козлова К. А., Басова Д. А., Пермякова В. В. ЭК-31</p>
+        <p class="family">Козлова К. А., Басова Д. А., Пермякова В. В. ЭК-31</p>
         <ul>
             <li><a href="#">Правовая оговорка</a></li>
             <li><a href="#">Пользовательское соглашение</a></li>
