--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header class="header container">
         <a class="header__logo-wrap" href="index.html">
-            <img class="header__logo" src="images/Студия17.jpg" alt="Логотип" width="150" height="150">
-            <h1 class="header__title"> СТУДИЯ17</h1>
+            <img class="header__logo" src="images/логотип.jpg" alt="Логотип" width="50">
+            <h1 class="header__title"> musedelame</h1>
         </a>
         <nav class="header__menu">
             <ul class="menu">
@@ -43,21 +43,21 @@
                 <h2 class="catalog__title">NEW COLLECTION</h2>
                 <button class="catalog button">ЕЩЁ</button>
                 <div class="catalog__card">
-                    <img class= "shirt__image" src="images/рубашка.jpg" alt="Фото рубашки" width="500">
+                    <img class= "catalog__image" src="images/рубашка.jpg" alt="Фото рубашки" width="500">
                     <h3 class="catalog_name">Рубашка офисная</h3>
                     <p class="catalog_color">Цвет: белый</p>
                     <button class="catalog button">Перейти к товару</button>
                     <span>4 999 ₽</span>   
                 </div>
                 <div class="catalog__card">
-                    <img class="dress__image" src="images/платьешко.jpg" alt="Фото платьешко" width="500">
+                    <img class="catalog__image" src="images/платьешко.jpg" alt="Фото платьешко" width="500">
                     <h3 class="catalog_name">Нежное платье миди</h3>
                     <p class="catalog_color">Цвет: молочный</p>
                     <button class="catalog button">Перейти к товару</button>
                     <span>7 999 ₽</span>
                 </div>
                 <div class="catalog__card">
-                    <img class="skirt__image" src="images/юбка.jpg" alt="Фото юбка" width="500">
+                    <img class="catalog__image" src="images/юбка.jpg" alt="Фото юбка" width="500">
                     <h3 class="catalog_name">Юбка длины макси из ткани с жатым эффектом</h3>
                     <p class="catalog_color">Цвет: бежевый</p>
                     <button class="catalog button">Перейти к товару</button>
@@ -69,17 +69,17 @@
             <div class="catalog">
                 <h2 class="catalog__title">ОДЕЖДА</h2>
                 <div class="catalog__card">
-                    <img class="jacket__image" src="images/жакет.jpg" alt="Фото жакет" width="500">
+                    <img class="catalog__image" src="images/жакет.jpg" alt="Фото жакет" width="500">
                     <h3 class="catalog_name">Жакеты</h3>
                     <button class="catalog button">СМОТРЕТЬ</button>
                 </div>
                 <div class="catalog__card">
-                    <img  class="skirt__image" src="images/юбкамакси.jpg" alt="Фото юбкамакси" width="500">
+                    <img  class="catalog__image" src="images/юбкамакси.jpg" alt="Фото юбкамакси" width="500">
                     <h3 class="catalog_name">Юбки</h3>
                     <button class="catalog button">СМОТРЕТЬ</button>
                 </div>
                 <div class="catalog__card">
-                    <img class="tie__image" src="images/галстук.jpg" alt="Фото галстук" width="500">
+                    <img class="catalog__image" src="images/галстук.jpg" alt="Фото галстук" width="500">
                     <h3 class="catalog_name">Костюмы</h3>
                     <button class="catalog button">СМОТРЕТЬ</button>
                 </div>
@@ -89,17 +89,17 @@
             <div class="catalog">
                 <h2 class="catalog__title">ОБУВЬ</h2>
                 <div class="catalog__card">
-                    <img class="shoes__image" src="images/туфли.jpg" alt="Фото туфли" width="500">
+                    <img class="catalog__image" src="images/туфли.jpg" alt="Фото туфли" width="500">
                     <h3 class="catalog_name">Туфли</h3>
                     <button class="catalog button">СМОТРЕТЬ</button>
                 </div>
                 <div class="catalog__card">
-                    <img class="balletshoes__image" src="images/балетки.jpg" alt="Фото балетки" width="500">
+                    <img class="catalog__image" src="images/балетки.jpg" alt="Фото балетки" width="500">
                     <h3 class="catalog_name">Балетки</h3>
                     <button class="catalog button">СМОТРЕТЬ</button>
                 </div>
                 <div class="catalog__card">
-                    <img  class="sandals__image" src="images/босоножки.jpg" alt="Фото босоножки" width="500">
+                    <img  class="catalog__image" src="images/босоножки.jpg" alt="Фото босоножки" width="500">
                     <h3 class="catalog_name">Босоножки</h3>
                     <button class="catalog button">СМОТРЕТЬ</button>
                 </div>
@@ -110,24 +110,37 @@
                 <h2 class="catalog__title">АКСЕССУАРЫ</h2>
                 <button class="catalog button">ЕЩЁ</button>
                 <div class="catalog__card">
-                    <img class="pendant__image" src="images/кулон.jpg" alt="Фото кулон" width="500">
+                    <img class="catalog__image" src="images/кулон.jpg" alt="Фото кулон" width="500">
                     <h3 class="catalog_name">Тонкая цепь с овальной подвеской</h3>
                     <button class="catalog button">Перейти к товару</button>
                     <span>1 599 ₽</span>
                 </div>
                 <div class="catalog__card">
-                    <img class="barrette__image" src="images/заколка.jpg" alt="Фото заколка" width="500">
+                    <img class="catalog__image" src="images/заколка.jpg" alt="Фото заколка" width="500">
                     <h3 class="catalog_name">Бархатный бант для волос с заколкой из бусин</h3>
                     <button class="catalog button">Перейти к товару</button>
                     <span>1 299 ₽</span>
                 </div>    
                 <div class="catalog__card">
-                    <img class="bracelet__image" src="images/браслет.jpg" alt="Фото браслет" width="500">
+                    <img class="catalog__image" src="images/браслет.jpg" alt="Фото браслет" width="500">
                     <h3 class="catalog_name">Круглый браслет из фактурного металла</h3>
                     <button class="catalog button">Перейти к товару</button>
                     <span>1 699 ₽</span>
                 </div>
             </div>
+        </section>
+        <section class="about">
+            <div class="about__wrap-left">
+                <h2 class="about__title"> О нас</h2>
+                <p> Наш интернет-магазин предлагает широкий ассортимент стильной и качественной одежды.
+                    Мы тщательно отбираем товары, чтобы вы могли найти именно то, что идеально подойдет вашему стилю и предпочтениям.
+                    В нашем магазине представлены коллекции от ведущих мировых брендов, а также уникальные модели от молодых дизайнеров.
+                    Мы следим за модными тенденциями и регулярно обновляем наш ассортимент, чтобы предложить вам самые актуальные новинки сезона. </p>
+                <a class="about__button" href="#">Перейти к покупкам</a>
+            </div>
+                <div class="about_wrap-right">
+                    <img class="about__image" src="images/онас.jpg" alt="О нас" width="5000" height="175">
+                </div>
         </section>
         <section>
             <form action="/">
