--- a/index.html
+++ b/index.html
@@ -38,96 +38,88 @@
         <button class="header__button button" type="button">КОРЗИНА</button>
     </header> 
     <main class="main container">
-        <section>
-            <div class="catalog">
+        <section class="catalog">
                 <h2 class="catalog__title">NEW COLLECTION</h2>
                 <button class="catalog button">ЕЩЁ</button>
                 <div class="catalog__card">
                     <img class= "catalog__image" src="images/рубашка.jpg" alt="Фото рубашки" width="500">
-                    <h3 class="catalog_name">Рубашка офисная</h3>
-                    <p class="catalog_color">Цвет: белый</p>
+                    <h3 class="catalog__name">Рубашка офисная</h3>
+                    <p class="catalog__color">Цвет: белый</p>
                     <button class="catalog button">Перейти к товару</button>
                     <span>4 999 ₽</span>   
                 </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/платьешко.jpg" alt="Фото платьешко" width="500">
-                    <h3 class="catalog_name">Нежное платье миди</h3>
-                    <p class="catalog_color">Цвет: молочный</p>
+                    <h3 class="catalog__name">Нежное платье миди</h3>
+                    <p class="catalog__color">Цвет: молочный</p>
                     <button class="catalog button">Перейти к товару</button>
                     <span>7 999 ₽</span>
                 </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/юбка.jpg" alt="Фото юбка" width="500">
-                    <h3 class="catalog_name">Юбка длины макси из ткани с жатым эффектом</h3>
-                    <p class="catalog_color">Цвет: бежевый</p>
+                    <h3 class="catalog__name">Юбка длины макси из ткани с жатым эффектом</h3>
+                    <p class="catalog__color">Цвет: бежевый</p>
                     <button class="catalog button">Перейти к товару</button>
                     <span>5 499 ₽</span>
                 </div>
-            </div>
         </section>
-        <section>
-            <div class="catalog">
+        <section class="catalog">
                 <h2 class="catalog__title">ОДЕЖДА</h2>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/жакет.jpg" alt="Фото жакет" width="500">
-                    <h3 class="catalog_name">Жакеты</h3>
+                    <h3 class="catalog__name">Жакеты</h3>
                     <button class="catalog button">СМОТРЕТЬ</button>
                 </div>
                 <div class="catalog__card">
                     <img  class="catalog__image" src="images/юбкамакси.jpg" alt="Фото юбкамакси" width="500">
-                    <h3 class="catalog_name">Юбки</h3>
+                    <h3 class="catalog__name">Юбки</h3>
                     <button class="catalog button">СМОТРЕТЬ</button>
                 </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/галстук.jpg" alt="Фото галстук" width="500">
-                    <h3 class="catalog_name">Костюмы</h3>
+                    <h3 class="catalog__name">Костюмы</h3>
                     <button class="catalog button">СМОТРЕТЬ</button>
                 </div>
-            </div>
         </section>
-        <section>
-            <div class="catalog">
+        <section class="catalog">
                 <h2 class="catalog__title">ОБУВЬ</h2>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/туфли.jpg" alt="Фото туфли" width="500">
-                    <h3 class="catalog_name">Туфли</h3>
+                    <h3 class="catalog__name">Туфли</h3>
                     <button class="catalog button">СМОТРЕТЬ</button>
                 </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/балетки.jpg" alt="Фото балетки" width="500">
-                    <h3 class="catalog_name">Балетки</h3>
+                    <h3 class="catalog__name">Балетки</h3>
                     <button class="catalog button">СМОТРЕТЬ</button>
                 </div>
                 <div class="catalog__card">
                     <img  class="catalog__image" src="images/босоножки.jpg" alt="Фото босоножки" width="500">
-                    <h3 class="catalog_name">Босоножки</h3>
+                    <h3 class="catalog__name">Босоножки</h3>
                     <button class="catalog button">СМОТРЕТЬ</button>
                 </div>
-            </div>
         </section>
-        <section>
-            <div class="catalog">
+        <section class="catalog">
                 <h2 class="catalog__title">АКСЕССУАРЫ</h2>
                 <button class="catalog button">ЕЩЁ</button>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/кулон.jpg" alt="Фото кулон" width="500">
-                    <h3 class="catalog_name">Тонкая цепь с овальной подвеской</h3>
+                    <h3 class="catalog__name">Тонкая цепь с овальной подвеской</h3>
                     <button class="catalog button">Перейти к товару</button>
                     <span>1 599 ₽</span>
                 </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/заколка.jpg" alt="Фото заколка" width="500">
-                    <h3 class="catalog_name">Бархатный бант для волос с заколкой из бусин</h3>
+                    <h3 class="catalog__name">Бархатный бант для волос с заколкой из бусин</h3>
                     <button class="catalog button">Перейти к товару</button>
                     <span>1 299 ₽</span>
                 </div>    
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/браслет.jpg" alt="Фото браслет" width="500">
-                    <h3 class="catalog_name">Круглый браслет из фактурного металла</h3>
+                    <h3 class="catalog__name">Круглый браслет из фактурного металла</h3>
                     <button class="catalog button">Перейти к товару</button>
                     <span>1 699 ₽</span>
                 </div>
-            </div>
         </section>
         <section class="about">
             <div class="about__wrap-left">
@@ -138,25 +130,31 @@
                     Мы следим за модными тенденциями и регулярно обновляем наш ассортимент, чтобы предложить вам самые актуальные новинки сезона. </p>
                 <a class="about__button" href="#">Перейти к покупкам</a>
             </div>
-                <div class="about_wrap-right">
+                <div class="about__wrap-right">
                     <img class="about__image" src="images/онас.jpg" alt="О нас" width="5000" height="175">
                 </div>
         </section>
         <section>
-            <form action="/">
-                <h1>Вход</h1>
-                <input type="tel" name="phone" placeholder="Номер телефона" required>
-                <input type="password" name="password" placeholder="Пароль" required>
-                <button>Войти</button>
+            <form class="form" action="/">
+                <h1 class="form__title">Вход</h1>
+                <input class="form__input" type="tel" name="phone" placeholder="Номер телефона" required>
+                <input class="form__input" type="password" name="password" placeholder="Пароль" required>
+                <button class="form__button">Войти</button>
             </form>
         </section>
     </main>
     <footer class="footer container">
         <p class="family">Козлова К. А., Басова Д. А., Пермякова В. В. ЭК-31</p>
         <ul>
-            <li><a href="#">Правовая оговорка</a></li>
-            <li><a href="#">Пользовательское соглашение</a></li>
-            <li><a href="#">Политика конфиденциальности</a></li>
+            <li class="document__item">
+                <a class="document__link" href="#">Правовая оговорка</a>
+            </li>
+            <li class="document__item">
+                <a class="document__link" href="#">Пользовательское соглашение</a>
+            </li>
+            <li class="document__item">
+                <a class="document__link" href="#">Политика конфиденциальности</a>
+            </li>
         </ul>
     </footer>
 </body>
