--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
     </header> 
     <main class="main container">
         <section class="catalog">
+            <div class="catalog__wrap">
                 <h2 class="catalog__title">NEW COLLECTION</h2>
-                <button class="catalog button">ЕЩЁ</button>
+                <button class="catalog__button">ЕЩЁ</button>
+            </div>
                 <div class="catalog__card">
                     <img class= "catalog__image" src="images/рубашка.jpg" alt="Фото рубашки" width="500">
                     <h3 class="catalog__name">Рубашка офисная</h3>
@@ -64,7 +66,10 @@
                 </div>
         </section>
         <section class="catalog">
+            <div class="catalog__wrap">
                 <h2 class="catalog__title">ОДЕЖДА</h2>
+                <button class="catalog__button">ЕЩЁ</button>
+            </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/жакет.jpg" alt="Фото жакет" width="500">
                     <h3 class="catalog__name">Жакеты</h3>
@@ -82,7 +87,10 @@
                 </div>
         </section>
         <section class="catalog">
+            <div class="catalog__wrap">
                 <h2 class="catalog__title">ОБУВЬ</h2>
+                <button class="catalog__button">ЕЩЁ</button>
+            </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/туфли.jpg" alt="Фото туфли" width="500">
                     <h3 class="catalog__name">Туфли</h3>
@@ -100,8 +108,10 @@
                 </div>
         </section>
         <section class="catalog">
+            <div class="catalog__wrap">
                 <h2 class="catalog__title">АКСЕССУАРЫ</h2>
-                <button class="catalog button">ЕЩЁ</button>
+                <button class="catalog__button">ЕЩЁ</button>
+            </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/кулон.jpg" alt="Фото кулон" width="500">
                     <h3 class="catalog__name">Тонкая цепь с овальной подвеской</h3>
@@ -145,7 +155,7 @@
     </main>
     <footer class="footer container">
         <p class="family">Козлова К. А., Басова Д. А., Пермякова В. В. ЭК-31</p>
-        <ul>
+        <ul class="document">
             <li class="document__item">
                 <a class="document__link" href="#">Правовая оговорка</a>
             </li>
