--- a/index.html
+++ b/index.html
@@ -32,103 +32,105 @@
                 </li>
             </ul>
         </nav>
-        <button class="header__button button" type="button">ПОИСК</button>
-        <button class="header__button button" type="button">ВОЙТИ</button>
-        <button class="header__button button" type="button">ИЗБРАННОЕ</button>
-        <button class="header__button button" type="button">КОРЗИНА</button>
+        <div class="header__buttons">
+            <button class="header__button button" type="button">ПОИСК</button>
+            <button class="header__button button" type="button">ВОЙТИ</button>
+            <button class="header__button button" type="button">ИЗБРАННОЕ</button>
+            <button class="header__button button" type="button">КОРЗИНА</button>
+        </div>
     </header> 
     <main class="main container">
         <section class="catalog">
             <div class="catalog__wrap">
                 <h2 class="catalog__title">NEW COLLECTION</h2>
-                <button class="catalog__button">ЕЩЁ</button>
+                <a class="catalog__link" href="#">ЕЩЁ</a>
             </div>
                 <div class="catalog__card">
                     <img class= "catalog__image" src="images/рубашка.jpg" alt="Фото рубашки" width="500">
                     <h3 class="catalog__name">Рубашка офисная</h3>
                     <p class="catalog__color">Цвет: белый</p>
-                    <button class="catalog button">Перейти к товару</button>
-                    <span>4 999 ₽</span>   
+                    <span>4 999 ₽</span>
+                    <a class="catalog__links" href="#">Перейти к товару</a>
                 </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/платьешко.jpg" alt="Фото платьешко" width="500">
                     <h3 class="catalog__name">Нежное платье миди</h3>
                     <p class="catalog__color">Цвет: молочный</p>
-                    <button class="catalog button">Перейти к товару</button>
                     <span>7 999 ₽</span>
+                    <a class="catalog__links" href="#">Перейти к товару</a>
                 </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/юбка.jpg" alt="Фото юбка" width="500">
                     <h3 class="catalog__name">Юбка длины макси из ткани с жатым эффектом</h3>
                     <p class="catalog__color">Цвет: бежевый</p>
-                    <button class="catalog button">Перейти к товару</button>
                     <span>5 499 ₽</span>
+                    <a class="catalog__links" href="#">Перейти к товару</a>
                 </div>
         </section>
         <section class="catalog">
             <div class="catalog__wrap">
                 <h2 class="catalog__title">ОДЕЖДА</h2>
-                <button class="catalog__button">ЕЩЁ</button>
+                <a class="catalog__link" href="#">ЕЩЁ</a>
             </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/жакет.jpg" alt="Фото жакет" width="500">
                     <h3 class="catalog__name">Жакеты</h3>
-                    <button class="catalog button">СМОТРЕТЬ</button>
+                    <a class="catalog__link" href="#">СМОТРЕТЬ</a>
                 </div>
                 <div class="catalog__card">
                     <img  class="catalog__image" src="images/юбкамакси.jpg" alt="Фото юбкамакси" width="500">
                     <h3 class="catalog__name">Юбки</h3>
-                    <button class="catalog button">СМОТРЕТЬ</button>
+                    <a class="catalog__link" href="#">СМОТРЕТЬ</a>
                 </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/галстук.jpg" alt="Фото галстук" width="500">
                     <h3 class="catalog__name">Костюмы</h3>
-                    <button class="catalog button">СМОТРЕТЬ</button>
+                    <a class="catalog__link" href="#">СМОТРЕТЬ</a>
                 </div>
         </section>
         <section class="catalog">
             <div class="catalog__wrap">
                 <h2 class="catalog__title">ОБУВЬ</h2>
-                <button class="catalog__button">ЕЩЁ</button>
+                <a class="catalog__link" href="#">ЕЩЁ</a>
             </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/туфли.jpg" alt="Фото туфли" width="500">
                     <h3 class="catalog__name">Туфли</h3>
-                    <button class="catalog button">СМОТРЕТЬ</button>
+                    <a class="catalog__link" href="#">СМОТРЕТЬ</a>
                 </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/балетки.jpg" alt="Фото балетки" width="500">
                     <h3 class="catalog__name">Балетки</h3>
-                    <button class="catalog button">СМОТРЕТЬ</button>
+                    <a class="catalog__link" href="#">СМОТРЕТЬ</a>
                 </div>
                 <div class="catalog__card">
                     <img  class="catalog__image" src="images/босоножки.jpg" alt="Фото босоножки" width="500">
                     <h3 class="catalog__name">Босоножки</h3>
-                    <button class="catalog button">СМОТРЕТЬ</button>
+                    <a class="catalog__link" href="#">СМОТРЕТЬ</a>
                 </div>
         </section>
         <section class="catalog">
             <div class="catalog__wrap">
                 <h2 class="catalog__title">АКСЕССУАРЫ</h2>
-                <button class="catalog__button">ЕЩЁ</button>
+                <a class="catalog__link" href="#">ЕЩЁ</a>
             </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/кулон.jpg" alt="Фото кулон" width="500">
                     <h3 class="catalog__name">Тонкая цепь с овальной подвеской</h3>
-                    <button class="catalog button">Перейти к товару</button>
                     <span>1 599 ₽</span>
+                    <a class="catalog__links" href="#">Перейти к товару</a>
                 </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/заколка.jpg" alt="Фото заколка" width="500">
                     <h3 class="catalog__name">Бархатный бант для волос с заколкой из бусин</h3>
-                    <button class="catalog button">Перейти к товару</button>
                     <span>1 299 ₽</span>
+                    <a class="catalog__links" href="#">Перейти к товару</a>
                 </div>    
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/браслет.jpg" alt="Фото браслет" width="500">
                     <h3 class="catalog__name">Круглый браслет из фактурного металла</h3>
-                    <button class="catalog button">Перейти к товару</button>
                     <span>1 699 ₽</span>
+                    <a class="catalog__links" href="#">Перейти к товару</a>
                 </div>
         </section>
         <section class="about">
