--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <h3 class="catalog__name">Рубашка офисная</h3>
                     <p class="catalog__color">Цвет: белый</p>
                     <span>4 999 ₽</span>
+                    <button class="catalog__item" type="button">♡</button>
                     <a class="catalog__links" href="#">Перейти к товару</a>
                 </div>
                 <div class="catalog__card">
@@ -57,6 +58,7 @@
                     <h3 class="catalog__name">Нежное платье миди</h3>
                     <p class="catalog__color">Цвет: молочный</p>
                     <span>7 999 ₽</span>
+                    <button class="catalog__item" type="button">♡</button>
                     <a class="catalog__links" href="#">Перейти к товару</a>
                 </div>
                 <div class="catalog__card">
@@ -64,6 +66,7 @@
                     <h3 class="catalog__name">Юбка длины макси из ткани с жатым эффектом</h3>
                     <p class="catalog__color">Цвет: бежевый</p>
                     <span>5 499 ₽</span>
+                    <button class="catalog__item" type="button">♡</button>
                     <a class="catalog__links" href="#">Перейти к товару</a>
                 </div>
         </section>
@@ -118,18 +121,21 @@
                     <img class="catalog__image" src="images/кулон.jpg" alt="Фото кулон" width="500">
                     <h3 class="catalog__name">Тонкая цепь с овальной подвеской</h3>
                     <span>1 599 ₽</span>
+                    <button class="catalog__item" type="button">♡</button>
                     <a class="catalog__links" href="#">Перейти к товару</a>
                 </div>
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/заколка.jpg" alt="Фото заколка" width="500">
                     <h3 class="catalog__name">Бархатный бант для волос с заколкой из бусин</h3>
                     <span>1 299 ₽</span>
+                    <button class="catalog__item" type="button">♡</button>
                     <a class="catalog__links" href="#">Перейти к товару</a>
                 </div>    
                 <div class="catalog__card">
                     <img class="catalog__image" src="images/браслет.jpg" alt="Фото браслет" width="500">
                     <h3 class="catalog__name">Круглый браслет из фактурного металла</h3>
                     <span>1 699 ₽</span>
+                    <button class="catalog__item" type="button">♡</button>
                     <a class="catalog__links" href="#">Перейти к товару</a>
                 </div>
         </section>
